--- a/wishlist/templates/wishlist/wishlist.html
+++ b/wishlist/templates/wishlist/wishlist.html
@@ -13,7 +13,88 @@ Your Wishlist
 {% if wishlist_item %}
 <div class="row">
     <div class="col">
-        {{ wishlist_item }}
+        <div class="d-block d-md-none">
+            {% for item in wishlist_item %}
+                <div class="row">
+                    <div class="col-12 col-sm-6 mb-2">
+                        {% if item.image %}
+                        <a href="{% url 'product_detail' item.id %}">
+                            <img src="{{ item.image.url }}" alt="{{ item.name }}" class="img-fluid">
+                        </a>
+                        {% else %}
+                        <a href="{% url 'product_detail' item.id %}">
+                            <img src="{{ MEDIA_URL }}placeholder-img.png" alt="{{ item.name }}" class="img-fluid">
+                        </a>
+                        {% endif %}
+                    </div>
+                    <div class="col-12 col-sm-6 mb-2">
+                        <p class="my-0"><a href="{% url 'product_detail' item.id %}" class="text-black"><strong>{{ item.name }}</strong></a></p>
+                        <p class="my-0 small text-muted">SKU: {{ item.sku|upper }}</p>
+                        <p class="mt-3">Price: £{{ item.price }}</p>
+                        <form class="form text-center mt-5" action="{% url 'add_to_bag' item.id %}" method="POST">
+                            {% csrf_token %}
+                            <input type="hidden" name="quantity" type="Number" value="1">
+                            <input type="submit" class="btn btn-success" value="Add to Bag">
+                            <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                            <a href="{% url 'add_remove_wishlist' item.id %}" class="btn btn-danger"><i class="fa-solid fa-xmark"></i></a>
+                        </form>
+                    </div>
+                </div>
+                <div class="row"><div class="col"><hr></div></div>
+            {% endfor %}
+            <div class="btt-button shadow-sm border border-black">
+                <a class="btt-link d-flex h-100">
+                    <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
+                </a>	
+            </div>
+        </div>
+        <div class="table-responsive rounded d-none d-md-block">
+            <table class="table table-sm">
+                <thead class="text-black">
+                    <tr class="text-center">
+                        <th scope="col" class="text-center">Product Info</th>
+                        <th scope="col"></th>
+                        <th scope="col">Price</th>
+                        <th scope="col"></th>
+                        <th scope="col"></th>
+                    </tr>
+                </thead>
+
+                {% for item in wishlist_item %}
+                    <tr>
+                        <td class="p-3 w-25">
+                            {% if item.image %}
+                            <a href="{% url 'product_detail' item.id %}">
+                                <img src="{{ item.image.url }}" alt="{{ item.name }}" class="img-fluid">
+                            </a>
+                            {% else %}
+                            <a href="{% url 'product_detail' item.id %}">
+                                <img src="{{ MEDIA_URL }}placeholder-img.png" alt="{{ item.name }}" class="img-fluid">
+                            </a>
+                            {% endif %}
+                        </td>
+                        <td class="py-3 align-middle">
+                            <p class="my-0"><a href="{% url 'product_detail' item.id %}" class="text-black"><strong>{{ item.name }}</strong></a></p>
+                            <p class="my-0 small text-muted">SKU: {{ item.sku|upper }}</p>
+                        </td>
+                        <td class="py-3 align-middle text-center">
+                            <p class="my-0">£{{ item.price }}</p>
+                        </td>
+                        <td class="py-3 align-middle">
+                            <form class="form" action="{% url 'add_to_bag' item.id %}" method="POST">
+                                {% csrf_token %}
+                                <input type="hidden" name="quantity" type="Number" value="1">
+                                <input type="submit" class="btn btn-success w-100" value="Add to Bag">
+                                <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                            </form>
+                        </td>
+                        <td class="py-3 align-middle text-center">
+                            <a href="{% url 'add_remove_wishlist' item.id %}" class="btn btn-danger"><i class="fa-solid fa-xmark"></i></a>
+                        </td>
+                    </tr>
+                    {% endfor %}
+            </table>
+        </div>
     </div>
 </div>
 {% else %}
@@ -24,4 +105,14 @@ Your Wishlist
     </div>
 </div>
 {% endif %}
+{% endblock %}
+
+{% block postloadjs %}
+{{ block.super }}
+<script type="text/javascript">
+    // Scroll to top of the page on click
+    $('.btt-link').click(function(e) {
+        window.scrollTo(0,0)
+    })
+</script>
 {% endblock %}
