--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,6 @@
 {% load static %}
+{% load crispy_forms_filters %}
+{% load crispy_forms_tags %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -186,30 +188,9 @@
                 <div class="col-lg-4 col-md-12 text-center">
                     <h1 class="text-uppercase fs-3 fw-bold font-monospace">Sign up to our Newsletter!</h2>
                     <p>Get the latest Tech news!</p>
-                    <!-- Button trigger modal -->
-                    <button type="button" class="btn btn-warning mb-2" data-bs-toggle="modal" data-bs-target="#emailModal">
+                    <a href="{% url 'newsletter' %}" class="btn btn-warning mb-2">
                         <i class="fa-solid fa-newspaper me-2"></i>Sign up
-                    </button>
-                    <!-- Modal -->
-                    <div class="modal fade" id="emailModal" tabindex="-1" aria-labelledby="newsletter-signup" aria-hidden="true">
-                        <div class="modal-dialog modal-dialog-centered">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title text-black" id="newsletter-signup">Enter your Email below</h5>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                </div>
-                                <div class="modal-body text-black">
-                                    <form action="" method="post">
-                                        
-                                    </form>
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-dark" data-bs-dismiss="modal">Close</button>
-                                    <button type="button" class="btn btn-success" name="newsletter-submit">Submit</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    </a>
                 </div>
             </div>
         </div>
