--- a/blog/templates/blog/blog_detail.html
+++ b/blog/templates/blog/blog_detail.html
@@ -72,7 +72,7 @@
                     <p class="col-md-2 col-6">Edited: {{ comment.edited_on }}</p>
                     {% if request.user == comment.author or request.user.is_superuser %}
                     <p class="col-md-2 col-6"><a href="{% url 'edit_comment' comment.id %}">Edit</a></p>
-                    <p class="col-md-2 col-6"><a href="#" class="text-danger">Delete</a></p>
+                    <p class="col-md-2 col-6"><a href="{% url 'delete_comment' comment.id %}" class="text-danger">Delete</a></p>
                     {% endif %}
                 </div>
                 <hr>
