--- a/blog/templates/blog/delete_post.html
+++ b/blog/templates/blog/delete_post.html
@@ -11,7 +11,7 @@ Delete Blog Post
 <div class="row">
     <div class="col-12 text-center">
         <h2 class="fw-bold mb-4 text-center">Delete Blog Post</h2>
-        <h5 class="text-muted">You are about to delete the blog post.</h5>
+        <h5 class="text-muted">You are about to delete {{ blogpost.title }}.</h5>
         <p class="mt-2 text-black">Are you sure? This <strong class="text-danger text-uppercase">cannot</strong> be
             undone!</p>
         <form action="" method="post">
