--- a/templates/base.html
+++ b/templates/base.html
@@ -90,6 +90,7 @@
                                 <a href="{% url 'add_product' %}" class="dropdown-item">Add Product</a>
                                 {% endif %}
                                 <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
+                                <a href="{% url 'account_change_password' %}" class="dropdown-item">Change Password</a>
                                 <a href="{% url 'account_logout' %}" class="dropdown-item">Sign Out</a>
                                 {% else %}
                                 <a href="{% url 'account_login' %}" class="dropdown-item">Sign In</a>
