--- a/templates/includes/mobile-header.html
+++ b/templates/includes/mobile-header.html
@@ -40,9 +40,10 @@
         {% if request.user.is_authenticated %}
         {% if request.user.is_superuser %}
             <li><a href="{% url 'admin:index' %}" class="dropdown-item">Admin</a></li>
-            <li><a href="{% url 'add_product' %}" class="dropdown-item">Product Management</a></li>
+            <li><a href="{% url 'add_product' %}" class="dropdown-item">Add Product</a></li>
         {% endif %}
             <li><a href="{% url 'profile' %}" class="dropdown-item">My Profile</a></li>
+            <li><a href="{% url 'account_change_password' %}" class="dropdown-item">Change Password</a></li>
             <li><a href="{% url 'account_logout' %}" class="dropdown-item">Sign Out</a></li>
         {% else %}
             <li><a href="{% url 'account_login' %}" class="dropdown-item">Sign In</a></li>
